--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,6 +1,7 @@
 .header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
   margin: 45px auto 0 auto;
   max-width: 880px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
